client/src/assets/scss/nav.scss
.navTitleBar {
    background: url("../images/titleNav.png");
    background-size: contain;
    height: fit-content;
    background-repeat: repeat-x;
    box-shadow:
    -1px -1px 0 rgba(255, 255, 255, 0),
    1px 1px 0 rgba(0,0,0,.25),
    3px 3px 3px rgba(0,0,0,.25);
}

nav {
    width: 100%;
    height: auto;
}

.appTitle {
    font-family: cursive;
    font-weight: bolder;
    font-size: xx-large;
    text-shadow:
    -1px -1px 0 rgba(255, 255, 255, 0),
    1px 1px 0 rgba(0,0,0,.25),
    3px 3px 3px rgba(0,0,0,.25),
    10px 10px 20px rgba(0,0,0,.5),
    20px 40px 40px rgba(0,0,0,.5); 
}

.navBtn {
    font-family: cursive;
    font-weight: bold;
    font-size: large;
    text-shadow:
    -1px -1px 0 rgba(255, 255, 255, 0),
    1px 1px 0 rgba(0,0,0,.25),
    3px 3px 3px rgba(0,0,0,.25),
    10px 10px 20px rgba(0,0,0,.5),
    20px 40px 40px rgba(0,0,0,.5); 
}

